--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-align"  [ngStyle]="{'pointer-events': dfaApplicationMainDataService.getViewOrEdit() === 'viewOnly' ? 'none' : ''}"style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
     <form [formGroup]="damagedRoomsForm">
@@ -47,6 +47,7 @@
                   <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                       class="edit-image"
+                      *ngIf="vieworedit !== 'viewOnly'"
                       mat-icon-button
                       aria-label="Edit"
                       (click)="editDamagedRoomRow(element, index)"
@@ -60,6 +61,7 @@
                     </button>&nbsp;
                     <button
                       class="delete-image"
+                      *ngIf="vieworedit != 'viewOnly'"
                       mat-icon-button
                       aria-label="Remove"
                       (click)="deleteDamagedRoomRow(index)"
@@ -84,8 +86,12 @@
                 <br /><br/>
               </div>
 
+              <div  *ngIf="damagedRoomsDataSource.getValue().length == 0 && vieworedit == 'viewOnly'">
+                <br />No damaged rooms were added.<br/>
+              </div>
+
               <button
-                *ngIf="!showDamagedRoomForm"
+                *ngIf="!showDamagedRoomForm && vieworedit !== 'viewOnly'"
                 class="family-button"
                 mat-button
                 type="button"
@@ -209,6 +215,7 @@
         <div class="col-md-8">
           <app-dfa-attachment
             title="Damage photo"
+            *ngIf="vieworedit !== 'viewOnly'"
             description="Attach a photo/scanned copy of damaged items"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -275,7 +282,7 @@
                   mat-icon-button
                   aria-label="Remove"
                   (click)="confirmDeleteDamagePhotoRow(element)"
-                  *ngIf="dfaApplicationMainDataService.getViewOrEdit() === 'view' || dfaApplicationMainDataService.getViewOrEdit() === 'update'"
+                  *ngIf="vieworedit !== 'viewOnly'"
                 >
                   <img src="/assets/images/delete.svg" height="35" width="35" />
                   <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
@@ -295,6 +302,9 @@
 
           <div  *ngIf="damagePhotosDataSource.data.length > 0">
             <br /><br/>
+          </div>
+          <div  *ngIf="damagePhotosDataSource.data.length == 0 && vieworedit === 'viewOnly'">
+            <br />No damage photos were added.<br/>
           </div>
         </div>
       </div>
