--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-align" [ngStyle]="{'pointer-events': dfaApplicationMainDataService.getViewOrEdit() === 'view' || dfaApplicationMainDataService.getViewOrEdit() === 'edit' || dfaApplicationMainDataService.getViewOrEdit() === 'viewOnly' ? 'none' : ''}" style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
     <form [formGroup]="propertyDamageForm">
@@ -37,6 +37,7 @@
               <input matInput
                 [required]="propertyDamageForm.get('otherDamage').value === true || propertyDamageForm.get('otherDamage').value === 'true'"
                 type="text"
+                [readonly]="isReadOnly === true"
                 formControlName="otherDamageText"
                 placeholder="Cause of damage*"
                 maxlength="100"
@@ -74,12 +75,15 @@
               <mat-label>From date</mat-label>
               <input matInput
                 [matDatepicker]="fromPicker"
+                [readonly]="isReadOnly === true"
                 formControlName="damageFromDate"
                 [max]="propertyDamageForm.get('damageToDate').value ? propertyDamageForm.get('damageToDate').value : todayDate"
                 required >
               <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
-              <mat-datepicker #fromPicker></mat-datepicker>
+              <mat-datepicker-toggle matSuffix [for]="fromPicker" [disabled]="isReadOnly === true"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #fromPicker [disabled]="isReadOnly === true"
+              ></mat-datepicker>
               <mat-error
                 *ngIf="
                 propertyDamageForm.get('damageFromDate').invalid &&
@@ -104,12 +108,15 @@
               <input matInput
                 [matDatepicker]="toPicker"
                 formControlName="damageToDate"
+                [readonly]="isReadOnly === true"
                 [min]="propertyDamageForm.get('damageFromDate').value ? propertyDamageForm.get('damageFromDate').value : '2000-01-01'"
                 [max]="todayDate"
                 required>
               <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
-              <mat-datepicker #toPicker></mat-datepicker>
+              <mat-datepicker-toggle matSuffix [for]="toPicker" [disabled]="isReadOnly === true"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #toPicker [disabled]="isReadOnly === true"
+              ></mat-datepicker>
               <mat-error
                 *ngIf="
                 propertyDamageForm.get('damageToDate').invalid &&
@@ -150,6 +157,7 @@
             <textarea matInput
               formControlName="briefDescription"
               [rows]="5"
+              [readonly]="isReadOnly === true"
               style="resize:none"
               required
               maxlength="2000"
@@ -188,10 +196,19 @@
           <div class="col-md-4">
             <mat-form-field appearance="outline" >
               <mat-label>Date returned</mat-label>
-              <input matInput [matDatepicker]="rtnPicker" formControlName="dateReturned">
+              <input
+                matInput
+                [matDatepicker]="rtnPicker"
+                [readonly]="isReadOnly === true"
+                formControlName="dateReturned">
               <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle matSuffix [for]="rtnPicker"></mat-datepicker-toggle>
-              <mat-datepicker #rtnPicker></mat-datepicker>
+              <mat-datepicker-toggle
+                matSuffix
+                [disabled]="isReadOnly === true"
+                [for]="rtnPicker"
+                ></mat-datepicker-toggle>
+              <mat-datepicker #rtnPicker  [disabled]="isReadOnly === true"
+              ></mat-datepicker>
             </mat-form-field>
           </div>
         </div>
