--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -300,10 +300,20 @@
         </div>
         <div class="row">
           <div class="col-md-6 bottomspace">
-            <app-signature [hidden]="notInsured != true" [isRequired]="notInsured" whoseSignature="Applicant" (signature)="updateApplicantSignature($event)"></app-signature>
+            <app-signature
+              [hidden]="notInsured != true"
+              isReadOnly="false"
+              [isRequired]="notInsured"
+              whoseSignature="Applicant"
+              (signature)="updateApplicantSignature($event)"></app-signature>
           </div>
           <div class="col-md-6 bottomspace">
-            <app-signature [hidden]="notInsured != true" [isRequired]="false" whoseSignature="Secondary Applicant" (signature)="updateSecondaryApplicantSignature($event)"></app-signature>
+            <app-signature
+              [hidden]="notInsured != true"
+              isReadOnly="false"
+              [isRequired]="false"
+              whoseSignature="Secondary Applicant"
+              (signature)="updateSecondaryApplicantSignature($event)"></app-signature>
           </div>
         </div>
       </ng-container>
