--- a/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
@@ -13,7 +13,7 @@
      <p>Your profile has now been submitted.</p>
       <p>You must apply for DFA within 90 days of the disaster event.</p>
       <br /><br /><br />
-      <p style="text-align : center;font-size: 18px;">Do you want to apply for DFA now?</p>
+      <!--<p style="text-align : center;font-size: 18px;">Do you want to apply for DFA now?</p>-->
 
       <br />
       <br />
@@ -25,10 +25,10 @@
             mat-button
             (click)="navigateToDashboard()"
           >
-            No, I am not ready to apply
+            Close
           </button>
         </div>
-        <div class="col-3" style="justify-content:center">
+        <!--<div class="col-3" style="justify-content:center">
           <button
             class="button-p notice-button"
             mat-button
@@ -36,7 +36,7 @@
           >
             Yes, I want to apply now
           </button>
-        </div>
+        </div>-->
         <div class="col-3"></div>
       </div>
         <br />
