--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
 If you're an Indigenous community or local government your process is different: <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa">DFA for community recovery.</a>
         </div>
       <div class="col-md-6"></div>
-      <div class="col-md-6">
+      <!--<div class="col-md-6">
          <button
               class="button-p notice-button left-align"
               mat-button
@@ -30,7 +30,7 @@ If you're an Indigenous community or local government your process is different:
             >
               Create New Application
           </button>
-      </div>
+      </div>-->
       <div class="col-md-6"></div>
     </div>
     <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
