--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -518,7 +518,7 @@
                     class="delete-image"
                     mat-icon-button
                     aria-label="Remove"
-                    (click)="deleteOtherContactRow(index)"
+                    (click)="confirmDeleteOtherContactRow(index)"
                   >
                     <img src="/assets/images/delete.svg" height="35" width="35" />
                     <img
