--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -44,6 +44,7 @@ If you're an Indigenous community or local government your process is different:
         
       </div>
       <div class="col-md-6"></div>
+      <div class="col-md-6">Dev</div>
     </div>
     <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
       <!--<app-alert></app-alert>-->
