--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -183,9 +183,9 @@
               </mat-radio-button>
               <mat-radio-button
                 class="primary-radio-button"
-                value="I don't have a permanent address right now"
+                value="I don't have a mailing address right now"
               >
-                I don't have a permanent address right now
+                I don't have a mailing address right now
               </mat-radio-button>
               <mat-error
                 class="custom-mat-error"
