--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -300,7 +300,7 @@
                   {{ option.value }}
                 </mat-radio-button>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="prescreeningForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.Unsure">
-                  <br/>You may be eligible for DFA and should submit an application. As part of your application process, you must provide insurance payout documentation from your insurance broker
+                  <br/>You may be eligible for DFA and may submit an application. As part of your application process, you must provide insurance payout documentation from your insurance broker
                   showing what was covered by your insurance provider. The DFA Program won't be able to confirm eligibility until this information is provided.<br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="prescreeningForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
