--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-delete-dialog/dfa-confirm-delete.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-delete-dialog/dfa-confirm-delete.component.html
@@ -17,9 +17,11 @@
      No, don't delete
     </button>
   </div>-->
+  <div class="col-md-3"></div>
   <div class="col-md-6">
     <button class="button-p button-width" mat-button (click)="confirm()">
       OK
     </button>
   </div>
+  <div class="col-md-3"></div>
 </mat-dialog-actions>
