--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -4,7 +4,7 @@
     <div class="col-4" style="float:right;"
         matTooltip="You have until midnight on the day displayed to submit your application for DFA."
         matTooltipPosition="above">
-        <span class="sub-heading" style="float:right;">Submit application before midnight on {{ninetyDayDeadline | date: "MM/dd/yyyy"}}</span><br/>
+        <span class="sub-heading" style="float:right;">Submit application before midnight on: {{ninetyDayDeadline | date: "MM/dd/yyyy"}}</span><br/>
         <span class="sub-heading" style="color:#941372; float:right;" *ngIf="daysToApply>0">{{ daysToApply }} day(s) remaining to apply</span>
         <span class="sub-heading" style="color:#941372; float:right;" *ngIf="daysToApply==0">DUE MIDNIGHT TODAY</span>
         <span class="sub-heading" style="color:#941372; float:right;" *ngIf="daysToApply<0">{{ -1 - daysToApply }} DAY(S) OVERDUE</span>
@@ -17,7 +17,7 @@
     <div class="col-4" *ngIf="vieworedit === 'add' || vieworedit === 'update'" >
       <button
         class="button-p save-button col-4"
-        style="height:40px !important; vertical-align: middle; width:220px;"
+        style="height: 40px !important; vertical-align: middle; width: 220px; margin-top: 15px"
         (click)="saveAndBackToDashboard()"
         mat-stroked-button
         type="button"
