--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -665,7 +665,7 @@
               {{
                 (formCreationService.damagedPropertyAddressForm$ | async)?.value
                   .businessLegalName ? (formCreationService.damagedPropertyAddressForm$ | async)?.value
-                  .businessLegalName : ""
+                  .businessLegalName : "Enter required information"
               }}
             </span>
           </div>
