https://justice.gov.bc.ca/jira/browse/EMBCDFA-609

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
@@ -10,6 +10,15 @@
           matInput
           placeholder="Address Line 1"
           required
+          [formControl]="myControlAddr"
+          [matAutocomplete]="autoAddress1"
+          (input)="checkCanadaPostAddress(myControlAddr,
+            addressFormControl?.addressLine2,
+            addressFormControl?.community,
+            addressFormControl?.stateProvince,
+            addressFormControl?.postalCode,
+            addressMatchResponse
+            )"
         />
         <mat-error
           *ngIf="
@@ -27,6 +36,15 @@
         >
           Maximum length is 100 characters</mat-error
         >
+        <mat-autocomplete autoActiveFirstOption #autoAddress1="matAutocomplete">
+        
+        <mat-option (onSelectionChange)="selectOption(option, addressMatchResponse)"
+            *ngFor="let option of filteredAddress | async"
+            [value]="option.name"
+          >
+            {{ option.name }}
+          </mat-option>
+      </mat-autocomplete>
       </mat-form-field>
     </div>
   </div>
@@ -40,6 +58,13 @@
           maxlength="100"
           matInput
           placeholder="Address Line 2"
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
           *ngIf="
@@ -55,14 +80,45 @@
 
   <div class="row">
     <div class="col-md-4">
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated=='false'">
+      <mat-label>City</mat-label>
+      <input type="text"
+             placeholder="Select City"
+             aria-label="Number"
+             matInput
+             [formControl]="myControl"
+             [formControlName]="'community'"
+             [matAutocomplete]="auto"
+             (keyup)="SelectCity($event, 'input')"
+             [readonly]="primaryAddressWarning == true || readOnly == true"
+             >
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+        <!--@for (option of filteredCountries | async; track option) {
+          <mat-option [value]="option">{{option}}</mat-option>
+        }-->
+        <mat-option (onSelectionChange)="SelectCity(option, null)"
+            *ngFor="let option of filteredOptions | async"
+            [value]="option.name"
+          >
+            {{ option.name }}
+          </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+      <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated!='false'">
         <mat-label>City</mat-label>
         <input
           maxlength="100"
           [formControlName]="'community'"
           matInput
           placeholder="City"
-          required
+          
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
           *ngIf="
@@ -93,6 +149,13 @@
           matInput
           placeholder="Postal Code"
           required
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
          <mat-error
                     *ngIf="addressFormControl?.postalCode.invalid && addressFormControl?.postalCode.hasError('required')">
@@ -128,6 +191,13 @@
           placeholder="Province"
           maxlength="100"
           required
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <!--<mat-autocomplete
           #auto="matAutocomplete"
@@ -159,5 +229,9 @@
         <!--<mat-error *ngIf="validateProvince()"> Province is invalid</mat-error>-->
       </mat-form-field>
     </div>
+  </div>
+
+  <div id="divAddressMatchResponse" [style]="isCanadaPostValidated =='false' ? 'color: red' : 'color: green'">
+    {{addressMatchResponse}}
   </div>
 </form>
