--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -1,6 +1,54 @@
 <div [formGroup]="addressForm">
+  <br />
   <div class="row">
     <div class="col-md-5">
+      <!--<mat-form-field appearance="outline">
+      <mat-label>Address Line 1</mat-label>
+      <input formControlName="addressLine1"
+             matInput
+              placeholder="Address Line 1"
+              maxlength="100"
+              required
+              [readonly]="primaryAddressWarning == true || readOnly == true"
+             [formControl]="myControlAddr"
+             [matAutocomplete]="autoAddress1"
+             (input)="checkCanadaPostAddress(myControlAddr,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
+             />
+        <mat-error
+          *ngIf="
+            addressFormControl?.addressLine1.invalid &&
+            addressFormControl?.addressLine1.hasError('required')
+          "
+        >
+          Address Line 1 is required</mat-error
+        >
+        <mat-error
+          *ngIf="
+            addressFormControl?.addressLine1.invalid &&
+            addressFormControl?.addressLine1.hasError('maxLength')
+          "
+        >
+          Maximum length is 100 characters</mat-error
+        >
+      <mat-autocomplete autoActiveFirstOption #autoAddress1="matAutocomplete">-->
+        <!--@for (option of filteredCountries | async; track option) {
+          <mat-option [value]="option">{{option}}</mat-option>
+        }-->
+        <!--<mat-option (onSelectionChange)="selectOption(option, addressMatchResponse)"
+            *ngFor="let option of filteredAddress | async"
+            [value]="option.name"
+          >
+            {{ option.name }}
+          </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>-->
+
       <mat-form-field appearance="outline">
         <mat-label>Address Line 1</mat-label>
         <input
@@ -10,6 +58,15 @@
           maxlength="100"
           required
           [readonly]="primaryAddressWarning == true || readOnly == true"
+          [formControl]="myControlAddr"
+             [matAutocomplete]="autoAddress1"
+             (input)="checkCanadaPostAddress(myControlAddr,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
           *ngIf="
@@ -27,6 +84,15 @@
         >
           Maximum length is 100 characters</mat-error
         >
+        <mat-autocomplete autoActiveFirstOption #autoAddress1="matAutocomplete">
+        
+        <mat-option (onSelectionChange)="selectOption(option, addressMatchResponse)"
+            *ngFor="let option of filteredAddress | async"
+            [value]="option.name"
+          >
+            {{ option.name }}
+          </mat-option>
+      </mat-autocomplete>
       </mat-form-field>
     </div>
     <div class="col-md-1">
@@ -50,6 +116,13 @@
           placeholder="Address Line 2"
           maxlength="100"
           [readonly]="primaryAddressWarning == true || readOnly == true"
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
           *ngIf="
@@ -65,7 +138,42 @@
 
   <div class="row">
     <div class="col-md-4">
-      <mat-form-field appearance="outline">
+      <!--<mat-autocomplete #auto="matAutocomplete">
+        @for (option of options; track option) {
+          <mat-option [value]="option">{{option}}</mat-option>
+        }
+      </mat-autocomplete>-->
+      <!--<input type="text" [formControl]="typeahead" placeholder="Type ahead !" (input)="suggest()">
+      <div class="suggestions" *ngIf="suggestions.length">
+        <p *ngFor="let s of suggestions">{{s}}</p>
+      </div>-->
+
+      <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated=='false'">
+      <mat-label>City</mat-label>
+      <input type="text"
+             placeholder="Select City"
+             aria-label="Number"
+             matInput
+             [formControl]="myControl"
+             formControlName="community"
+             [matAutocomplete]="auto"
+             (keyup)="SelectCity($event, 'input')"
+             [readonly]="primaryAddressWarning == true || readOnly == true"
+             >
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+        <!--@for (option of filteredCountries | async; track option) {
+          <mat-option [value]="option">{{option}}</mat-option>
+        }-->
+        <mat-option (onSelectionChange)="SelectCity(option, null)"
+            *ngFor="let option of filteredOptions | async"
+            [value]="option.name"
+          >
+            {{ option.name }}
+          </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+
+      <mat-form-field appearance="outline"  *ngIf="isCanadaPostValidated!='false'">
         <mat-label>City</mat-label>
         <input
           maxlength="100"
@@ -74,26 +182,23 @@
           matInput
           placeholder="City"
           [readonly]="primaryAddressWarning == true || readOnly == true"
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
-        <!--<mat-autocomplete
-          #auto="matAutocomplete"
-          id="cityAutocomplete"
-        >
-          <mat-option
-            *ngFor="let option of filteredOptions | async"
-            [value]="option"
-            [id]="option.name"
-          >
-            {{ option.name }}
-          </mat-option>
-        </mat-autocomplete>-->
-        <!--<mat-error
+
+
+        <mat-error
           *ngIf="
             addressFormControl?.community.hasError('required')
           "
         >
           City is required</mat-error
-        >-->
+        >
         <!--<mat-error *ngIf="validateCity()"> City is invalid</mat-error>-->
         <mat-error
           *ngIf="
@@ -117,6 +222,13 @@
           placeholder="Province"
           [readonly]="primaryAddressWarning == true || readOnly == true"
           value="British Columbia"
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
           *ngIf="
@@ -139,6 +251,13 @@
           matInput
           [readonly]="primaryAddressWarning == true || readOnly == true"
           placeholder="Postal Code"
+          (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
+               addressFormControl?.addressLine2,
+               addressFormControl?.community,
+               addressFormControl?.stateProvince,
+               addressFormControl?.postalCode,
+               addressMatchResponse
+               )"
         />
         <mat-error
                     *ngIf="addressFormControl?.postalCode.invalid && addressFormControl?.postalCode.hasError('required')">
@@ -162,6 +281,10 @@
         >
       </mat-form-field>
     </div>
+  </div>
+
+  <div id="divAddressMatchResponse" [style]="isCanadaPostValidated =='false' ? 'color: red' : 'color: green'">
+    {{addressMatchResponse}}
   </div>
 
 </div>
