--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -196,7 +196,7 @@
             <p class="sub-heading" style="font-size: 15px">
               What date was your property first impacted by the disaster event?<span style="color:red" >*</span>
             </p>
-            <mat-form-field appearance="outline" >
+            <mat-form-field appearance="outline" style="width: 35%;min-width: 300px;">
               <input matInput
                 [matDatepicker]="fromPicker"
                 formControlName="damageFromDate"
