--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="addressForm">
   <br />
   <div class="row">
-    <div class="col-md-12">
+    <div [ngClass]="primaryAddressWarning == true ? 'col-md-5' : 'col-md-12' ">
       <!--<mat-form-field appearance="outline">
       <mat-label>Address Line 1</mat-label>
       <input formControlName="addressLine1"
@@ -49,7 +49,7 @@
       </mat-autocomplete>
     </mat-form-field>-->
 
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" >
         <mat-label>Address Line 1</mat-label>
         <input
           formControlName="addressLine1"
